Try to automatically end pds run if it runs too long.